# ncurses_snake

./: CMakeLists.txt  README.md  SnakeConfig.h  SnakeConfig.h.in  about_menu.c  about_menu.h  game_window.c  game_window.h  globals.h  main.c  main_menu.c  main_menu.h  settings_menu.c  settings_menu.h
