cmake_minimum_required(VERSION 3.10)
project(Snake VERSION 1.0)
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
configure_file(SnakeConfig.h.in SnakeConfig.h)
link_directories("/opt/homebrew/lib")
include_directories("/opt/homebrew/include")
add_executable(Snake main.c main_menu.c about_menu.c game_window.c settings_menu.c)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED true)
target_include_directories(Snake PUBLIC "${PROJECT_BINARY_DIR}")
target_link_libraries(Snake "${CURSES_LIBRARY}")
